[package]
name = "parse_test_executable"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/parse_test_executable"
description = "Simple program to extract executable path from `cargo test` output."
keywords = ["cargo", "test", "executable", "json", "message"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.81"
cargo_metadata = "0.15.4"
